--- a/pandas_series.ipynb
+++ b/pandas_series.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -65,15 +65,39 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ser1 = pd.Series([1,2,3,4], index=['EUA', 'Alemanha', 'Japao', 'URSS'])\n",
-    "ser1 = pd.Series([1,2,3,4], index=['EUA', 'Alemanha', 'URSS', 'Japao'])\n",
+    "ser2 = pd.Series([1,2,3,4], index=['EUA', 'Alemanha', 'URSS', 'Japao'])\n",
     "ser1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Alemanha    4\n",
+       "EUA         2\n",
+       "Japao       7\n",
+       "URSS        7\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser1 + ser2"
    ]
   },
   {
